--- a/src/scss/partials/_navbar.scss
+++ b/src/scss/partials/_navbar.scss
@@ -62,6 +62,42 @@
       }
     }
   }
+
+  @media(max-width: 375px) {
+    .navbar {
+      padding: 0.25rem 0 0.25rem 0.5rem;
+
+      .navbar-brand {
+        width: 118px;
+      }
+
+      .navbar-nav {
+        .nav-item {
+          margin-left: 0;
+        }
+      }
+
+      .btn-secondary.dropdown-toggle {
+        padding: 0.25rem 0.5rem;
+      }
+    }
+  }
+
+  @media(max-width: 330px) {
+    .navbar {
+      padding: 0.25rem 0.25rem 0.25rem 0.5rem;
+
+      .navbar-nav {
+        .nav-item {
+          min-width: 32px;
+        }
+      }
+
+      .btn-secondary.dropdown-toggle {
+        padding: 0.25rem;
+      }
+    }
+  }
 }
 
 html[data-theme=light] {
